--- a/src/front/styles/components/profile.css
+++ b/src/front/styles/components/profile.css
@@ -18,7 +18,7 @@
   background-color: var(--bg-tertiary);
 }
 
-.alerta-item {
+.alert-item {
   background-color: var(--bg-tertiary);
   border-radius: var(--space-8);
   padding: var(--space-md) var(--space-lg);
